// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpeneseSummmary with mulitple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    23,184,949.85 $
  </h1>
</div>
`;

exports[`should correctly render ExpeneseSummmary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    2.35 $
  </h1>
</div>
`;
